# hik_sdk_examples

./: CMakeLists.txt  README.md  main.cpp
inc/: DataType.h  DecodeCardSdk.h  HCNetSDK.h  plaympeg4.h
lib/: HCNetSDK_Log_Switch.xml
samples/: CMakeLists.txt  sample_ipc_play.cpp  sample_record_file.cpp  sample_record_play.cpp
